--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = atmelavr
 board = attiny85
 framework = arduino
+board_build.f_cpu = 1000000L
+
+
+; FUSE normal = (E:FF, H:DF, L:62)
+; Arduino AtTiny85 1Mhz default Fuse Bytes (8MHz internal clock div8 = 1MHz)
+;board_fuses.efuse = 0xFF
+;board_fuses.hfuse = 0xDF
+;board_fuses.lfuse = 0x62   ;0x62 = mit div8 , 0xE2 = ohne div 8
